fixing more overflow issues

--- a/web/themes/custom/psms/source/sass/2-layout/_header.scss
+++ b/web/themes/custom/psms/source/sass/2-layout/_header.scss
@@ -3,7 +3,6 @@
 // ==========================================================================
 
 header {
-  overflow-x: hidden;
   .nav-wrapper {
     display: flex;
     justify-content: flex-end;
