--- a/web/themes/custom/psms/source/sass/3-components/menus/_main-menu.scss
+++ b/web/themes/custom/psms/source/sass/3-components/menus/_main-menu.scss
@@ -21,6 +21,7 @@ header {
   }
   .full-display-navigation {
     display: none;
+    overflow-x: hidden;
     @include bp($main-nav, up) {
       display: block;
       .menu--main {
